--- a/index.html
+++ b/index.html
@@ -35,6 +35,35 @@
 
     <main>
       <!-- feature section starts -->
+      <section class="features">
+        <div class="feature-content">
+          <h3 class="section-title">Features you will <br>love & enjoy</h3>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+        </div>
+        <div class="feature-img">
+          <img src="images/architect.png" alt="">
+          <div class="ten-years-badge">
+            <h2>10+ years</h2>
+            <p>Experiences</p>
+          </div>
+        </div>
+      </section>
       <section class="teams-container">
         <!-- team section starts -->
         <div class="teams-img-container">
