--- a/index.html
+++ b/index.html
@@ -34,36 +34,6 @@
     <!-- header end -->
 
     <main>
-      <!-- feature section starts -->
-      <section class="features">
-        <div class="feature-content">
-          <h3 class="section-title">Features you will <br>love & enjoy</h3>
-          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-          <div class="card">
-            <h4>Dexktop & Mobile Version</h4>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-          </div>
-          <div class="card">
-            <h4>Dexktop & Mobile Version</h4>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-          </div>
-          <div class="card">
-            <h4>Dexktop & Mobile Version</h4>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-          </div>
-          <div class="card">
-            <h4>Dexktop & Mobile Version</h4>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-          </div>
-        </div>
-        <div class="feature-img">
-          <img src="images/architect.png" alt="">
-          <div class="ten-years-badge">
-            <h2>10+ years</h2>
-            <p>Experiences</p>
-          </div>
-        </div>
-      </section>
       <section class="teams-container">
         <!-- team section starts -->
         <div class="teams-img-container">
@@ -83,6 +53,57 @@
             humour, or randomised words which don't look even
           </p>
           <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!-- features section -->
+      <!-- feature section starts -->
+      <section class="features">
+        <div class="feature-content">
+          <h3 class="section-title">Features you will <br />love & enjoy</h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+        </div>
+        <div class="feature-img">
+          <img src="images/architect.png" alt="" />
+          <div class="ten-years-badge">
+            <h2>10+ years</h2>
+            <p>Experiences</p>
+          </div>
         </div>
       </section>
       <!-- features section -->
@@ -120,13 +141,16 @@
       <!-- sponsors section -->
       <section class="sponsors">
         <h3 class="section-title">Our Sponsors</h3>
-        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <p class="text-light-gray">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
         <div class="sponsors-img-container">
-          <img src="images/sponsors/spotify.png" alt="">
-          <img src="images/sponsors/amazon.png" alt="">
-          <img src="images/sponsors/google.png" alt="">
-          <img src="images/sponsors/telerama.png" alt="">
-          <img src="images/sponsors/figma.png" alt="">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
         </div>
       </section>
     </main>
